--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ Week1/input0.txt
 Week2/input1.txt
 Week2/input2.txt
 Week2/input3.txt
+Week3/input.txt
+Week3/input1.txt
+Week3/output.txt
+Week4/input1.txt
+Week4/output.txt
