--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,26 @@ Week3/input.txt
 Week3/input1.txt
 Week3/output.txt
 Week4/input1.txt
+Week4/input3.txt
 Week4/output.txt
+Week5/input1.txt
+Week5/input2.txt
+Week5/input3.txt
+Week6/input1.txt
+Week6/input2.txt
+Week6/input3.txt
+Week7/input1.txt
+Week7/input2.txt
+Week7/input3.txt
+Week8/input1.txt
+Week8/input2.txt
+Week8/input3.txt
+Week9/input1.txt
+Week9/input2.txt
+Week9/input3.txt
+Week10/input1.txt
+Week10/input2.txt
+Week10/input3.txt
+Week11/input1.txt
+Week11/input2.txt
+Week11/input3.txt
